[package]
name = "workspace_switcher"
version = "0.1.0"
authors = ["Gustavo Aguiar <gugahoa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-i3ipc = "0.13"
tokio = { version = "1.0", features = ["io-util", "macros", "rt-multi-thread"] }
